--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/cannon": "^5.0.1",
     "@react-three/fiber": "^7.0.26",
-    "next": "12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^12.1.0",
+    "react": "^18.0.0-rc.2",
+    "react-dom": "^18.0.0-rc.2",
     "three": "^0.138.3"
   },
   "devDependencies": {
