--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@react-three/cannon": "^5.0.1",
+    "@react-three/drei": "^8.16.7",
     "@react-three/fiber": "^7.0.26",
+    "@react-three/gltfjsx": "^4.3.4",
     "cass": "^0.0.5",
     "next": "^12.1.0",
     "react": "^18.0.0-rc.2",
