--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-three/cannon": "^5.0.1",
+    "@react-three/drei": "^8.18.5",
     "@react-three/fiber": "^7.0.26",
     "next": "^12.1.0",
     "react": "^18.0.0-rc.2",
